# Deep-Researcher-v2

./: .gitignore  README.md
app/: components.json  index.html  (+3 more)
backend/: API.md  gemini_models.json  gemini_models.txt  main.py  migrations.py  pyproject.toml  server.py
backend/.agents/rules/: documentation-rules.md  package-rules.md
backend/idea/: architecture.excalidraw
backend/main/apis/bucket/: bucket_urls.py
backend/main/apis/chats/: chat_urls.py
backend/main/apis/history/: history_urls.py
backend/main/apis/models/: bucket.py  chats.py  history.py  research.py  settings.py
backend/main/apis/reasearch/: research_urls.py
backend/main/apis/settings/: settings_urls.py
backend/main/apis/workspace/: workspace_urls.py
backend/main/secrets/: DRSecrets.py
backend/main/src/bucket/: bucket_orchestrator.py  bucket_store.py
backend/main/src/chat/: chat_orchestrator.py
backend/main/src/history/: history_orchestrator.py
backend/main/src/llms/gemini/: DRGeminiWrapper.py
backend/main/src/research/: research_api_orchestrator.py
backend/main/src/settings/: settings_orchestrator.py
backend/main/src/store/: DBManager.py  sqlite_manager.py
backend/main/src/utils/: DRLogger.py  __init__.py  versionManagement.py
backend/main/src/utils/core/ai/: imageEmbedder.py  queryOptimisations.py
backend/main/src/utils/llms/prompts/: getSchema.py
backend/main/src/utils/llms/prompts/json/: schemas.json
backend/main/src/workspace/: workspace_create.py  workspace_orchestrator.py
backend/tests/: TestGemini.py  imageEmbedderTest.py  test_sqlite_manager.py
(+72 files in other folders)
